2015-04-25  kitone  <kitone@gna.org>

	* src/gui/treeviewextensionmanager.cc:
	Fix bug #23508 : Make the preference dialog a bit wider, wrap text.

2015-04-25  kitone  <kitone@gna.org>

	* plugins/actions/spellchecking/dialog-spell-checking.ui:
	Remove deprecated widget.

2015-04-25  kitone  <kitone@gna.org>

	* plugins/actions/preferences/dialog-preferences.ui:
	* plugins/actions/preferences/preferencepage.h:
	* plugins/actions/preferences/preferencesplugin.cc:
	Fix bug #23508 : Make the preference dialog a bit wider. Remove deprecated widgets.

2015-04-25  kitone  <kitone@gna.org>

	* configure.ac:
	Switching back to development version.

2015-04-18  kitone  <kitone@gna.org>

	* NEWS:
	* configure.ac:
	Preparing 0.51.0 release.

2015-04-18  kitone  <kitone@gna.org>

	* src/Makefile.am:
	Fix missing comboboxtextcolumns.h file

2015-04-18  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc:
	Fix bug #23471 : Problems when saving into ASS - Save PlayResX/Y from screen resolution.

2015-04-18  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc:
	Fix bug #23471 : Problems when saving into ASS - rename Actor with Name

2015-04-18  kitone  <kitone@gna.org>

	* src/vp/gstplayer.cc:
	Fix bug #23317 : Character & messes up subtitle preview

2015-04-17  kitone  <kitone@gna.org>

	* plugins/actions/timingfromplayer/timingfromplayer.cc:
	Fix bug #20170 : "Video"/"Timing from player" with an offset - only if playing

2015-04-17  kitone  <kitone@gna.org>

	* src/gui/application.cc:
	Fix bug #23486 : Remember window size, work with gtkmm 3.10 and 3.12

2015-04-17  kitone  <kitone@gna.org>

	* src/gui/application.cc:
	Fix bug #23486 : Remember window size.

2015-04-17  kitone  <kitone@gna.org>

	* plugins/actions/timingfromplayer/Makefile.am:
	* plugins/actions/timingfromplayer/timingfromplayer.cc:
	Fix bug #20170 : "Video"/"Timing from player" with an offset
